<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bmi"
        android:icon="@drawable/ic_bmi_black_24dp"
        android:title="@string/title_bmi" />

    <item
        android:id="@+id/navigation_kcal"
        android:icon="@drawable/ic_kcal_black_24dp"
        android:title="@string/title_kcal" />
    <item
        android:id="@+id/navigation_przepisy"
        android:icon="@drawable/ic_przepisy_black_24dp"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_quiz_24"
        android:title="@string/title_quiz" />

</menu>