<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zdrowie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bmi"
        android:name="com.example.zdrowie.ui.bmi.BmiFragment"
        android:label="@string/title_bmi"
        tools:layout="@layout/fragment_kcal" />

    <fragment
        android:id="@+id/navigation_kcal"
        android:name="com.example.zdrowie.ui.kcal.KcalFragment"
        android:label="@string/title_kcal"
        tools:layout="@layout/fragment_preparation" />
    <fragment
        android:id="@+id/navigation_przepisy"
        android:name="com.example.zdrowie.ui.recipes.PreparationFragment"
        android:label="@string/title_recipes" />
</navigation>