<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kcal.KcalFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="2"
        android:columnCount="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:useDefaultMargins="true"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/heightEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/ageEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/heightLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/enter_height" />

        <TextView
            android:id="@+id/ageLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/enter_age" />

        <TextView
            android:id="@+id/weightLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/enter_weight" />

        <EditText
            android:id="@+id/weightEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/sexLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/title_sex" />

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0">

            <RadioButton
                android:id="@+id/femaleSexRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex_radio_female_label" />

            <RadioButton
                android:id="@+id/maleSexRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex_radio_male_label" />

        </RadioGroup>

        <TextView
            android:id="@+id/bmrLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:text="@string/bmr"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmrValueTextView"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:text="@string/bmr_value"
            android:textAlignment="textEnd" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>