<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kcal.KcalFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="2"
        android:columnCount="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:useDefaultMargins="true"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/heightEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/heightLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/enter_height" />

        <TextView
            android:id="@+id/weightLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/enter_weight" />

        <TextView
            android:id="@+id/bmiLabelTextView"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/bmi"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/weightEditNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/bmiTextView"
            android:layout_width="105dp"
            android:layout_height="29dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/bmi_value"
            android:textAlignment="textEnd" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>